--- a/Pendulo/pendulo.ipynb
+++ b/Pendulo/pendulo.ipynb
@@ -2,35 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pygame 2.5.0 (SDL 2.30.10, Python 3.11.11)\n",
-      "Hello from the pygame community. https://www.pygame.org/contribute.html\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<frozen importlib._bootstrap>:241: RuntimeWarning: Your system is avx2 capable but pygame was not built with support for it. The performance of some of your blits could be adversely affected. Consider enabling compile time detection with environment variables like PYGAME_DETECT_AVX2=1 if you are compiling without cross compilation.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "import pygame"
+    "import pygame\n",
+    "import pygame.font\n",
+    "\n",
+    "BLACK = (0  ,0  ,0  )\n",
+    "WHITE = (255,255,255)\n",
+    "GREEN = (0  ,150,40 )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +44,11 @@
     "g   = 980\n",
     "gamma = .1\n",
     "gammath = .1\n",
+    "\n",
+    "cart_size = [40,20]\n",
+    "cart_pos  = [400-20,300-10]\n",
+    "\n",
+    "rail_height = cart_pos[1]+cart_size[1]/2\n",
     "\n",
     "def cart_evol(t, x, a = 0):\n",
     "    vDot = a - gamma * x[1]\n",
@@ -69,6 +63,15 @@
     "def get_pos_pend(ang, point, L):\n",
     "    return point[0] - L*np.sin(ang), point[1] + L*np.cos(ang)\n",
     "\n",
+    "def draw_player(screen, cart, pend_pos):\n",
+    "    pygame.draw.line(screen, BLACK,\n",
+    "                    cart.center, pend_pos,\n",
+    "                    width = 6)\n",
+    "    pygame.draw.rect(screen, WHITE, cart)\n",
+    "    pygame.draw.rect(screen, BLACK, cart, 4)\n",
+    "    pygame.draw.circle(screen, WHITE, pend_pos, 20)\n",
+    "    pygame.draw.circle(screen, BLACK, pend_pos, 20, 5)\n",
+    "\n",
     "def update_screen(screen, cart, th,dt):\n",
     "    screen.fill((255,255,255))\n",
     "\n",
@@ -76,40 +79,37 @@
     "\n",
     "    global target_H, score\n",
     "    if target_H:\n",
-    "        pygame.draw.line(screen, (0,150,40), (0,target_H), (1600,target_H), 10)\n",
-    "        \n",
+    "        pygame.draw.line(screen, GREEN, (0,target_H), (1600,target_H), 6)\n",
     "        if pend_pos[1] < target_H:\n",
     "            score += dt\n",
-    "\n",
-    "    pygame.draw.line(screen, (40,40,40),\n",
-    "                    cart.center, pend_pos,\n",
-    "                    width = 10)\n",
-    "    pygame.draw.rect(screen, (130,10,10), cart)\n",
-    "    pygame.draw.circle(screen, (0,0,0), pend_pos, 10)"
+    "    pygame.draw.line(screen, BLACK, (100, rail_height-30), (100, rail_height+30), 4)\n",
+    "    pygame.draw.line(screen, BLACK, (100, rail_height), (1440, rail_height), 4)\n",
+    "    pygame.draw.line(screen, BLACK, (1440, rail_height-30), (1440, rail_height+30), 4)\n",
+    "    draw_player(screen, cart, pend_pos)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17.75799999999987\n"
+      "15.160999999999806\n"
      ]
     }
    ],
    "source": [
-    "cart_size = [40,20]\n",
-    "cart_pos  = [400-20,300-10]\n",
-    "\n",
-    "target_th = 1\n",
+    "target_th = 2.5\n",
     "target_H = get_pos_pend(target_th, cart_pos, l)[1]\n",
     "\n",
     "th, thDot  = 0, 0\n",
     "a, v, x = 0, 0, cart_pos[0]\n",
+    "# Añado esto para poder tratar mejor las colisiones en los bordes\n",
+    "a_pend = a\n",
     "\n",
     "score = 0\n",
     "\n",
@@ -130,15 +130,26 @@
     "  \n",
     "  time = pygame.time.get_ticks()/1000\n",
     "  dt = clock.tick(120)/1000 # Por los milisecs\n",
+    "  \n",
+    "  if player.x < 100:\n",
+    "    x, a = 100, -v/dt * .2\n",
+    "    a_pend = -v/dt * 1.2\n",
+    "    v = 0\n",
+    "  elif player.x > 1400:\n",
+    "    x, a = 1400, -v/dt * .2\n",
+    "    a_pend = -v/dt * 1.2\n",
+    "    v = 0\n",
+    "  \n",
     "  x, v = RK4(cart_evol, [x, v], dt, a = a)\n",
-    "  th, thDot = RK4(pend_evol, [th, thDot], dt, a = a)\n",
+    "  th, thDot = RK4(pend_evol, [th, thDot], dt, a = a_pend)\n",
     "  player.move_ip(x-player.x, 0)\n",
     "\n",
     "  update_screen(screen, player, th,dt)\n",
     "  # time and fps'{:-9} YES votes  {:2.2%}'.format(yes_votes, percentage)\n",
-    "  screen.blit(my_font.render(\"TIME: %.1f\"%(time), False, (255, 0, 0)), (100,100))\n",
-    "  screen.blit(my_font.render(\"SCORE: %.1f\"%(score), False, (0,150,40)), (100,50))\n",
-    "  screen.blit(my_font.render(\"FPS: %i\"%(clock.get_fps()), False, (255, 0, 0)), (100,150))\n",
+    "  screen.blit(my_font.render(\"TIME: %.1f\"%(time), False, BLACK), (100,100))\n",
+    "  screen.blit(my_font.render(\"SCORE: %.1f\"%(score), False, GREEN), (100,50))\n",
+    "  #screen.blit(my_font.render(\"FPS: %i\"%(clock.get_fps()), False, BLACK), (100,150))\n",
+    "  screen.blit(my_font.render(\"dt [ms]: %i\"%(dt*1000), False, BLACK), (100,150))\n",
     "\n",
     "  key = pygame.key.get_pressed()\n",
     "  if key[pygame.K_a] == True:\n",
@@ -147,6 +158,7 @@
     "    a = 1000\n",
     "  else:\n",
     "    a = 0\n",
+    "  a_pend = a\n",
     "  \n",
     "  for event in pygame.event.get():\n",
     "    if event.type == pygame.QUIT:\n",
@@ -222,7 +234,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pendulum",
+   "display_name": "Inv1",
    "language": "python",
    "name": "python3"
   },
@@ -236,7 +248,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
