Reorganización y cambios insignificantes

--- a/RL/HuggingFace/Lunarxd.ipynb
+++ b/RL/HuggingFace/Lunarxd.ipynb
@@ -71,18 +71,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "obs, _ = render_env.reset() \n",
+    "while True:\n",
+    "    obs, _ = render_env.reset() \n",
     "\n",
-    "for i in range(1500):\n",
-    "    action, _ = model.predict(obs, deterministic=True)\n",
-    "    obs, reward, terminated, truncated, info = render_env.step(action)\n",
-    "    # render_env.render()\n",
-    "    if terminated or truncated:\n",
-    "        # Note that the VecEnv resets automatically\n",
-    "        # when a done signal is encountered\n",
-    "        print(i+1, info)\n",
-    "        break\n",
-    "print(i+1, info)"
+    "    for i in range(1500):\n",
+    "        action, _ = model.predict(obs, deterministic=True)\n",
+    "        obs, reward, terminated, truncated, info = render_env.step(action)\n",
+    "        # render_env.render()\n",
+    "        if terminated or truncated:\n",
+    "            # Note that the VecEnv resets automatically\n",
+    "            # when a done signal is encountered\n",
+    "            print(i+1, info)\n",
+    "            break\n",
+    "    print(i+1, info)"
    ]
   },
   {
